<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activities.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Theme.Forms.LinearLayoutContainer"
        android:gravity="center">

        <TextView
            style="@style/Theme.Forms.Title"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/mdSpacing"
            android:layout_marginBottom="@dimen/mdSpacing"
            android:text="@string/login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_email"
            style="@style/Theme.Forms.AuthInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_email"
                style="@style/Theme.Forms.TextInputEditTex"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_password"
            style="@style/Theme.Forms.AuthInputLayout"
            android:layout_marginBottom="0dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_edit_password"
                style="@style/Theme.Forms.TextInputEditTex"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/login_pass_text_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/smSpacing"
            android:layout_marginBottom="@dimen/mdSpacing"
            android:textColor="@color/error"
            tools:text="error" />

        <Button
            android:id="@+id/login_btn_login"
            style="@style/Theme.Forms.Button"
            android:layout_marginBottom="22sp"
            android:enabled="false"
            android:text="@string/login" />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/black_lighest" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white"
                android:padding="8dp"
                android:text="@string/or" />
        </FrameLayout>


        <include layout="@layout/social_logins" />

        <Button
            android:id="@+id/login_btn_sing_up"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/sign_up"
            android:textColor="@color/primary" />

    </LinearLayout>
</ScrollView>