<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >


<LinearLayout
    style="@style/Theme.Forms.LinearLayoutContainer">

    <ImageButton
        android:id="@+id/register_pass_btn_back"
        style="@style/Theme.Forms.OnBackButton"
        android:contentDescription="@null" />

    <TextView
        style="@style/Theme.Forms.Title"
        android:layout_marginVertical="@dimen/xlSpacing"
        android:text="@string/register_your_password" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_pass_input_password"
        app:endIconMode="password_toggle"

        style="@style/Theme.Forms.AuthInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_pass_edit_password"
            style="@style/Theme.Forms.TextInputEditTex"
            android:inputType="textPassword"
            android:hint="@string/hint_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/register_pass_input_confirm_pass"
        android:layout_marginBottom="0dp"
        app:endIconMode="password_toggle"
        app:errorIconDrawable="@null"
        style="@style/Theme.Forms.AuthInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/register_pass_edit_confirm_pass"
            style="@style/Theme.Forms.TextInputEditTex"
            android:inputType="textPassword"
            android:hint="@string/confirm_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/register_pass_text_error"
        tools:text="error"
        android:layout_marginStart="@dimen/smSpacing"
        android:layout_marginBottom="@dimen/mdSpacing"
        android:layout_width="wrap_content"
        android:textColor="@color/error"
        android:layout_height="wrap_content" />


    <com.example.forms.ui.components.StrongPasswordIndicator
        android:id="@+id/register_pass_strong_pass_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/mdSpacing"
        android:gravity="bottom">

        <Button
            android:id="@+id/register_pass_btn_next"
            style="@style/Theme.Forms.Button"
            android:enabled="true"
            android:text="@string/next" />
    </LinearLayout>

</LinearLayout>
</ScrollView>